# canvas-ai

./: .firebaserc  README.md  components.json  package-lock.json  package.json  rsw.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.firebase/: hosting.cHVibGlj.cache
.rsw/: rsw.crates  rsw.info
src/: App.vue  main.ts
src-rust/: Cargo.toml  LICENSE_MIT
src-rust/src/: lib.rs  openai_api.rs  openai_api.rs.old
src/agents/: Convo.ts  Function.ts  TextGen.ts  structured.ts
src/components/: Agent.vue  AgentPointer.vue  CanvasObject.vue  Chat.vue  ChatInput.vue  DebugAssistants.vue  FileObject.vue  LatestPlanInteraction.vue  MacroDetails.vue  MacroList.vue  MacroSequence.vue  MacroSteps.vue  NoteAdder.vue  OpenAIDialog.vue  PrimativeList.vue  SessionTabs.vue  StickyNote.vue  Upload.vue  ZoomView.vue
src/components/ui/: index.ts
src/components/ui/navigation-menu/: NavigationMenuTrigger.vue
src/lib/: ConvoAgent.ts  FunctionCallingAgent.ts  PromptBuilder.ts  StructuredAgents.ts  TextGenAgent.ts  primitives.ts  utils.ts
src/router/: index.ts
src/store/: example.ts  user.ts
src/stores/: PlanInteraction.ts  agent.ts  assistant.ts  chat.ts  files.ts  macro.ts  messages.ts  session.ts  thread.ts  useUploadedFilesStore.ts  user.ts
src/types/: src-rust.d.ts
src/views/: SessionView.vue
